--- a/ServerManagerFTPHost/ServerManagerFTPHost.vbproj
+++ b/ServerManagerFTPHost/ServerManagerFTPHost.vbproj
@@ -89,6 +89,8 @@
     <Compile Include="JsonServer\Exceptions\JsonServerException.vb" />
     <Compile Include="JsonServer\JsonServerHost.vb" />
     <Compile Include="JsonServer\Messages\AddSolution.vb" />
+    <Compile Include="JsonServer\Messages\EditServer.vb" />
+    <Compile Include="JsonServer\Messages\EditSolution.vb" />
     <Compile Include="JsonServer\Messages\Error.vb" />
     <Compile Include="JsonServer\Messages\Login.vb" />
     <Compile Include="JsonServer\Messages\Logout.vb" />
