--- a/ServerManager/packages.config
+++ b/ServerManager/packages.config
@@ -4,5 +4,6 @@
   <package id="HtmlRenderer.Core" version="1.5.1-beta1" targetFramework="net45" />
   <package id="HtmlRenderer.WinForms" version="1.5.1-beta1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="12.0.2-beta1" targetFramework="net452" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net452" />
   <package id="YamlDotNet" version="6.0.0" targetFramework="net452" />
 </packages>
