--- a/ServerManager/ServerManager.vbproj
+++ b/ServerManager/ServerManager.vbproj
@@ -197,6 +197,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationEvents.vb" />
+    <Compile Include="Charcoal\HybridMPExplorer.Designer.vb">
+      <DependentUpon>HybridMPExplorer.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Charcoal\HybridMPExplorer.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Charcoal\HybridMPManager.Designer.vb">
+      <DependentUpon>HybridMPManager.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Charcoal\HybridMPManager.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Charcoal\IManagerGUI.vb" />
     <Compile Include="Charcoal\NukkitPluginExplorer.Designer.vb">
       <DependentUpon>NukkitPluginExplorer.vb</DependentUpon>
@@ -478,6 +490,12 @@
     <None Include="ServerManager_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Charcoal\HybridMPExplorer.resx">
+      <DependentUpon>HybridMPExplorer.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Charcoal\HybridMPManager.resx">
+      <DependentUpon>HybridMPManager.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Charcoal\NukkitPluginExplorer.resx">
       <DependentUpon>NukkitPluginExplorer.vb</DependentUpon>
     </EmbeddedResource>
