--- a/ServerManager/My Project/Settings.settings
+++ b/ServerManager/My Project/Settings.settings
@@ -11,5 +11,8 @@
     <Setting Name="ShowSnapshot" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="CustomForgeVersion" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
