--- a/ServerManager/app.config
+++ b/ServerManager/app.config
@@ -36,6 +36,9 @@
             <setting name="ShowSnapshot" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="CustomForgeVersion" serializeAs="String">
+                <value>False</value>
+            </setting>
         </ServerManager.My.MySettings>
     </userSettings>
   <runtime>
