--- a/ServerManager/ServerManager.vbproj
+++ b/ServerManager/ServerManager.vbproj
@@ -157,6 +157,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\References\NATUPnP.dll</HintPath>
     </Reference>
+    <Reference Include="NBT, Version=1.7.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\NBT_Library.1.7.0\lib\net451\NBT.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -356,6 +359,12 @@
       <DependentUpon>ForgeBranchChooser.vb</DependentUpon>
     </Compile>
     <Compile Include="GUI\Server\ForgeBranchChooser.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\Server\MapChangeForm.Designer.vb">
+      <DependentUpon>MapChangeForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\Server\MapChangeForm.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="GUI\Server\SpigotGitStatus.Designer.vb">
@@ -572,6 +581,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\Server\ForgeBranchChooser.resx">
       <DependentUpon>ForgeBranchChooser.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\Server\MapChangeForm.resx">
+      <DependentUpon>MapChangeForm.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\Server\SpigotGitStatus.resx">
       <DependentUpon>SpigotGitStatus.vb</DependentUpon>
