--- a/ServerManager/packages.config
+++ b/ServerManager/packages.config
@@ -5,6 +5,7 @@
   <package id="HtmlRenderer.WinForms" version="1.5.1-beta1" targetFramework="net45" />
   <package id="Microsoft.Build.Tasks.Git" version="1.0.0-beta-63102-01" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Net.Compilers" version="3.0.0" targetFramework="net452" developmentDependency="true" />
+  <package id="NBT_Library" version="1.7.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net452" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net452" />
   <package id="YamlDotNet" version="6.1.1" targetFramework="net452" />
