--- a/ServerManager/ServerManager.vbproj
+++ b/ServerManager/ServerManager.vbproj
@@ -491,6 +491,7 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="GlobalModule.vb" />
+    <Compile Include="ManagerUpdater.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
