--- a/ServerManager/ServerManager.vbproj
+++ b/ServerManager/ServerManager.vbproj
@@ -336,6 +336,12 @@
     <Compile Include="GUI\BungeeCord\BungeeCordConsole.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="GUI\CMDForm.Designer.vb">
+      <DependentUpon>CMDForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\CMDForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="GUI\ModPack Server\ModPackServerConsole.Designer.vb">
       <DependentUpon>ModPackServerConsole.vb</DependentUpon>
     </Compile>
@@ -569,6 +575,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\BungeeCord\BungeeCordConsole.resx">
       <DependentUpon>BungeeCordConsole.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\CMDForm.resx">
+      <DependentUpon>CMDForm.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\ModPack Server\ModPackServerConsole.resx">
       <DependentUpon>ModPackServerConsole.vb</DependentUpon>
