--- a/ServerManager/app.config
+++ b/ServerManager/app.config
@@ -30,6 +30,9 @@
             <setting name="NoIPPasswordViewChecked" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="CreateServerDialog_PortBoxValue" serializeAs="String">
+                <value>25565</value>
+            </setting>
         </ServerManager.My.MySettings>
     </userSettings>
   <runtime>
