--- a/ServerManager/My Project/Settings.settings
+++ b/ServerManager/My Project/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="NoIPPasswordViewChecked" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="CreateServerDialog_PortBoxValue" Type="System.Decimal" Scope="User">
+      <Value Profile="(Default)">25565</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
